--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -101,6 +101,7 @@
 	publisher = {Springer},
 	series    = {Lecture Notes in Computer Science},
 	year = {2015},
+	note = {To appear},
 }
 	editor = {},
 
@@ -298,6 +299,21 @@
 }
 
 
+
+@article{BlT09,
+	author    = {Bozzelli, Laura and {La Torre}, Salvatore},
+	title     = {Decision problems for lower/upper bound parametric timed automata},
+	journal   = {Formal Methods in System Design},
+	volume    = {35},
+	number    = {2},
+	year      = {2009},
+	pages     = {121-151},
+	ee        = {http://dx.doi.org/10.1007/s10703-009-0074-0},
+	bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+
 @inproceedings{cgjlv00,
 	author = {E. M. Clarke and O. Grumberg and S. Jha and Y. Lu and H. Veith},
 	title = {Counterexample-Guided Abstraction Refinement},
@@ -337,6 +353,23 @@
 	volume    = {1019},
 	year      = {1995},
 	isbn      = {3-540-60630-0},
+	bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
+
+
+@article{HRSV02,
+	author    = {Thomas Hune and
+				Judi Romijn and
+				Mari{\"e}lle Stoelinga and
+				Frits W. Vaandrager},
+	title     = {Linear parametric model checking of timed automata},
+	journal   = {Journal of Logic and Algebraic Programming},
+	volume    = {52-53},
+	year      = {2002},
+	pages     = {183-220},
+	ee        = {http://dx.doi.org/10.1016/S1567-8326(02)00037-1},
 	bibsource = {DBLP, http://dblp.uni-trier.de}
 }
 
