--- a/doc/include/fischerPAT_obs.tex
+++ b/doc/include/fischerPAT_obs.tex
@@ -283,7 +283,7 @@ $\\
 	\caption{PTA observer}
 	\label{pta:observer}
 	\end{subfigure}
-\caption{Fischer mutual exclusion protocol}
+\caption{Fischer mutual exclusion protocol (graphical \NIPTA{})}
 \label{figure:fischer}
 \end{figure}
 
