--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -395,19 +395,21 @@
 
 	\vspace{2cm}
 
-	\includegraphics[width=0.40\textwidth]{../logos/imitator-500.png}
+	\includegraphics[width=0.50\textwidth]{../logos/imitator-500.png}
 
-	\vspace{2cm}
+	\vspace{2.5cm}
 	
 	{\Large Version \imitatorversion{} (\imitatorversionname{})}
 	
 	\medskip
 	
-	\includegraphics[width=0.30\textwidth]{../logos/logo2-7-300.png}
+	\includegraphics[height=0.15\textwidth]{../logos/logo2-300.png}
+% 	
+	\includegraphics[height=0.15\textwidth]{../logos/logo2-8-300.png}
 
 \end{center}
 
-\vspace{2cm}
+\vspace{1.5cm}
 
 {\small \hfill{}Build \input{../build_number.txt}}
 
@@ -445,7 +447,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\imitator{} is an open source software tool to perform automated parameter synthesis for concurrent timed systems~\cite{AFKS12}.
+\imitator{} is a free, open source software tool to perform automated parameter synthesis for concurrent timed systems~\cite{AFKS12}.
 \imitator{} takes as input a network of \imitator{} parametric timed automata (\NIPTA{}): \NIPTA{} are an extension of parametric timed automata~\cite{AHV93}, a well-known formalism to specify and verify models of systems where timing constants can be replaced with parameters, \ie{} unknown constants.
 
 \imitator{} addresses several variants of the following problem:
@@ -2429,7 +2431,7 @@ Camille~Coti, Sami~Evangelista and Nguyen~Hoang~Gia worked on the distributed ve
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection*{\imitator{} license}
-\imitator{} is available under the GNU GPL license.
+\imitator{} is free software available under the GNU GPL license.
 
 \begin{center}
 	\includegraphics[width=.3\textwidth]{images/GPLv3_Logo.png}
@@ -2483,12 +2485,22 @@ This user manual is available under the Creative Commons CC-BY-SA license.
 \url{https://commons.wikimedia.org/wiki/File:Typing_monkey.svg}
 
 
-\paragraph{\imitator{}'s 2.7 version logo} comes from  \stylePath{Andouille-Scheiben.jpg} by Pwagenblast on Wikimedia Commons
+\paragraph{\imitator{}'s 2.x version logo} comes from \stylePath{Stick\_of\_butter.jpg} by Renee Comet on Wikimedia Commons
+	(License: public domain).
+
+\url{https://commons.wikimedia.org/wiki/File:Stick_of_butter.jpg}
+
+\paragraph{\imitator{}'s 2.7 version logo} comes from \stylePath{Andouille-Scheiben.jpg} by Pwagenblast on Wikimedia Commons
 	(License: Creative Commons Attribution 3.0 Unported).
 The background erasing was done by Fabrice~Kordon.
 
 \url{https://commons.wikimedia.org/wiki/File:Andouille-Scheiben.jpg}
 
+
+\paragraph{\imitator{}'s 2.8 version logo} comes from \stylePath{Schinken-roh.jpg} by Rainer Zenz on Wikimedia Commons
+	(License: Creative Commons Attribution-Share Alike 3.0 Unported).
+
+\url{https://commons.wikimedia.org/wiki/File:Schinken-roh.jpg}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
