Update version in user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -225,7 +225,7 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{2.8-alpha}
+\newcommand{\imitatorversion}{2.8-beta1}
 \newcommand{\imitatorversionname}{Butter Ham}
 
 
