Ready for IMITATOR release 2.8

--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -276,6 +276,19 @@
 }
 
 
+@inproceedings{Andre16,
+	author = {Andr{\'e}, {\'E}tienne},
+	booktitle =		{Proceedings of the 13th International Colloquium on Theoretical Aspects of Computing (ICTAC'16)},
+	editor = {Augusto Cesar Alves Sampaio and Wang, Farn},
+	note			= {To appear},
+	title = {Parametric Deadlock-Freeness Checking Timed Automata},
+	year = {2016},
+	lipn-category = {intc},
+	lipn-status={apar},
+	keywords = {intc},
+}
+
+
 @book{AS13,
   	author = {Andr{\'e}, {\'E}tienne and Soulat, Romain},
   	isbn = {9781848214477},
