--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2382,6 +2382,8 @@ The following words are reserved keywords and cannot be used as names for automa
 
 \styleIMI{always},
 \styleIMI{and},
+\styleIMI{automatically\_generated\_observer},
+\styleIMI{automatically\_generated\_x\_obs},
 \styleIMI{automaton},
 \styleIMI{bad},
 \styleIMI{before},
