Factorize the title page of user manual

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -9,17 +9,22 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+% META DATA
 \hypersetup{
 	pdftitle={IMITATOR User Manual},
 	pdfauthor={\'Etienne Andr\'e}%
 }
-
-
-% Title Page
 \title{IMITATOR User Manual}
 \author{Étienne André}
-% \date{}
 
+% TITLE TO BE PRINTED ON THE FIRST PAGE
+\newcommand{\titleOnFirstPage}{IMITATOR User Manual}
+
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 % \maketitle
 
@@ -27,60 +32,9 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\thispagestyle{empty}
-
-\mbox{}
-
-\vspace{2cm}
-
-\begin{center}
-	{\Huge \bfseries IMITATOR User Manual}
-
-	\vspace{2cm}
-
-	\includegraphics[width=0.50\textwidth]{../logos/imitator-500.png}
-
-	\vspace{2.5cm}
-	
-	{\Large Version \imitatorversion{} (\imitatorversionname{})}
-	
-	\medskip
-	
-	\includegraphics[height=0.15\textwidth]{../logos/logo2-300.png}
-% 	
-	\includegraphics[height=0.15\textwidth]{../logos/logo2-8-300.png}
-
-\end{center}
-
-\vspace{1.5cm}
-
-{\small \hfill{}Build \input{../build_number.txt}}
-
-{\small \hfill{}\today{}}
-
-\vspace{2cm}
-
-\begin{center}
- 	{\Large \url{www.imitator.fr}}
- 	
-\end{center}
-\hfill\includegraphics[width=.15\textwidth]{images/CC-BY-SA_500.png}
-
-
-
+\input{title_and_toc.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\newpage
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\tableofcontents
-\addcontentsline{toc}{section}{Table of contents}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\newpage
-
-% \pagestyle{fancyplain}
-% \lhead{\fancyplain{}{\imitator{} \imitatorversion{} User Manual}}
 
 
 
