Prepare the space for a new special reset clock (reset along every transition)

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -2009,6 +2009,7 @@ The following words are reserved keywords and cannot be used as names for automa
 % \styleIMI{reach},
 \styleIMI{region},
 \styleIMI{sequence},
+\styleIMI{special\_0\_clock},
 \styleIMI{stop},
 \styleIMI{sync},
 \styleIMI{synclabs},
