--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -92,18 +92,20 @@
 }
 
 
+
 @inproceedings{ACN15,
 	author = {Andr{\'e}, {\'E}tienne and Coti, Camille and Nguyen, Hoang Gia},
 	title = {Enhanced Distributed Behavioral Cartography of Parametric Timed Automata},
-	booktitle = {ICFEM 15},
-	location = {Paris, France},
+	booktitle = {Proceedings of the 17th International Conference on Formal Engineering Methods (ICFEM'15)},
+  	doi       = {10.1007/978-3-319-25423-4_21},
+    	editor = {Butler, Michael and Conchon, Sylvain and Zaïdi, Fatiha},
+  	isbn      = {978-3-319-25422-7},
+  	location = {Paris, France},
 	month = nov,
 	publisher = {Springer},
 	series    = {Lecture Notes in Computer Science},
 	year = {2015},
-	note = {To appear},
 }
-	editor = {},
 
 
 @inproceedings{AF10,
@@ -120,9 +122,6 @@
   	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/AF-rp10.pdf},
   	volume =	{6227},
   	year =	{2010},
-	lipn-category = {intc},
-	lipn-time = {ant},
-  	keywords = {intc},
 }
 
 @inproceedings{AFKS12,
@@ -138,8 +137,6 @@
   	url =	{http://www.lsv.ens-cachan.fr/Publis/PAPERS/PDF/AFKS-fm12.pdf},
 	volume =	{7436},
 	year =	{2012},
-   	lipn-category = "intc",
-  	keywords = {intc},
 }
 
 
@@ -156,8 +153,6 @@
   	url = {http://lipn.univ-paris13.fr/~andre/documents/merge-and-conquer-state-merging-in-parametric-timed-automata.pdf},
   	volume =	{8172},
   	year =	{2013},
-   	lipn-category = {intc},
-  	keywords = {intc},
 }
 
 
@@ -173,8 +168,6 @@
 	title = {{CosyVerif}: An Open Source Extensible Verification Environment},
 	url = {http://lipn.univ-paris13.fr/~andre/documents/CosyVerif-an-Open-Source-Extensible-Verification-Environment.pdf},
 	year = {2013},
-   	lipn-category = {intc},
-  	keywords = {intc},
 }
 
 
@@ -255,8 +248,6 @@
 	url = {http://lipn.univ-paris13.fr/~andre/documents/dynamic-clock-elimination-in-parametric-timed-automata.pdf},
 	volume = {31},
 	year = {2013},
-   	lipn-category = {intc},
-  	keywords = {intc},
 }
 
 @inproceedings{Andre13ICECCS,
@@ -271,8 +262,6 @@
 	title = {Observer Patterns for Real-Time Systems},
 	url = {http://lipn.univ-paris13.fr/~andre/documents/observer-patterns-for-real-time-systems.pdf},
 	year = {2013},
-   	lipn-category = {intc},
-  	keywords = {intc,top10},
 }
 
 
@@ -280,11 +269,27 @@
 	author = {Andr{\'e}, {\'E}tienne},
 	booktitle =		{Proceedings of the 13th International Colloquium on Theoretical Aspects of Computing (ICTAC'16)},
 	editor = {Augusto Cesar Alves Sampaio and Wang, Farn},
-	note			= {To appear},
+	doi = {10.1007/978-3-319-46750-4_27},
+	location = {Taipei, Taiwan},
+	pages = {469--478},
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	volume = {9965},
 	title = {Parametric Deadlock-Freeness Checking Timed Automata},
 	year = {2016},
+}
+
+@inproceedings{ANPS17,
+	author = {Andr{\'e}, {\'E}tienne and Nguyen, Hoang Gia and Petrucci, Laure and Sun, Jun},
+	booktitle =		{Proceedings of the 9th {NASA} Formal Methods Symposium (NFM'17)},
+	editor = {Barrett, Clark and Kahsai, Temesghen},
+	location = {Moffett Field, CA, USA},
+	publisher = {Springer},
+	series    = {Lecture Notes in Computer Science},
+	title = {Parametric model checking timed automata under non-{Z}enoness assumption},
+	year = {2017},
+	note = {To appear},
 	lipn-category = {intc},
-	lipn-status={apar},
 	keywords = {intc},
 }
 
@@ -458,4 +463,25 @@
 	series    = {Lecture Notes in Computer Science},
 	volume    = {5643},
 	year      = {2009},
+}
+
+
+@article{WSWLSDYL15,
+  author    = {Ting Wang and
+               Jun Sun and
+               Xinyu Wang and
+               Yang Liu and
+               Yuanjie Si and
+               Jin Song Dong and
+               Xiaohu Yang and
+               Xiaohong Li},
+  title     = {A Systematic Study on Explicit-State Non-Zenoness Checking for Timed Automata},
+  journal   = {{IEEE} Transactions on Software Engineering},
+  volume    = {41},
+  number    = {1},
+  pages     = {3--18},
+  year      = {2015},
+  doi       = {10.1109/TSE.2014.2359893},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/tse/WangSWLSDYL15},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
